# llmproxy

./: .dockerignore  .env  .env-example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  DOCKER.md  DOCUMENTATION.md  Dockerfile  HOWTO.md  LOAD_TESTING.md  LOCAL_MODELS.md  PRE_COMMIT.md  README.md  TODO.md  agent.py  benchmark.py  benchmark_local.py  docker-compose.dashboard.yml  docker-compose.dev.yml  docker-compose.monitoring.yml  docker-compose.yml  llmproxy.sh  load_test.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  docker.yml  release.yml
dashboard/: README.md
dashboard/public/: index.html
dashboard/src/: App.js
data/: cost_tracker.json
llmproxy/: __init__.py  auth.py  cache.py  cli_agent.py  compressors.py  config.py  cost_tracker.py  filters.py  gpu_detector.py  local_provider.py  logging_config.py  metrics.py  model_manager.py  ollama_client.py  server.py  templates.py  tools.py  tracing.py
llmproxy/metrics/: __init__.py  metrics.py  prometheus.py
llmproxy/middleware/: __init__.py  sanitize.py
llmproxy/storage/: __init__.py  base.py  memory.py  redis.py
monitoring/: README.md  alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: llmproxy-dashboard.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
reports/: improvement_suggestions.md  test_report.md
scripts/: build.sh  setup-local-models.sh  typecheck.sh
tests/: __init__.py  conftest.py  run_all_tests.py  test_ab_integration.py  test_ab_testing.py  test_agent_max_rounds.py  test_agent_models_command.py  test_auth.py  test_cache.py  test_compressors.py  test_config.py  test_cost_tracker.py  test_filters.py  test_gpu_detector.py  test_integration.py  test_local_provider.py  test_metrics.py  test_prometheus.py  test_proxy.py  test_retry.py  test_sanitize.py  test_server.py  test_storage.py  test_streaming.py  test_templates.py  test_tools.py  test_tracing.py
